--- a/xlsx-JSON/xlsx-JSON/xlsx-JSON.csproj
+++ b/xlsx-JSON/xlsx-JSON/xlsx-JSON.csproj
@@ -14,4 +14,8 @@
       <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Include=".github\workflows\dotnet.yml" />
+    </ItemGroup>
+
 </Project>
