--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,10 +22,10 @@ jobs:
         dotnet-version: 8.0.x
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: xlsxToJSON/xlsx-JSON
+      working-directory: xlsx-JSON
     - name: Build
       run: dotnet build --no-restore
-      working-directory: xlsxToJSON/xlsx-JSON
+      working-directory: xlsx-JSON
     - name: Test
       run: dotnet test --no-build --verbosity normal
-      working-directory: xlsxToJSON/xlsx-JSON
+      working-directory: xlsx-JSON
