--- a/xlsx-JSON/xlsx-JSON/xlsx-JSON.csproj
+++ b/xlsx-JSON/xlsx-JSON/xlsx-JSON.csproj
@@ -18,4 +18,8 @@
         <Content Include=".github\workflows\dotnet.yml"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Documentation\" />
+    </ItemGroup>
+
 </Project>
