--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,12 +29,11 @@ jobs:
       - name: Test
         run: dotnet test --no-build --verbosity normal
         working-directory: xlsx-JSON
+      - name: List current directory
+        run: ls
+        working-directory: xlsx-JSON
       - name: Install Doxygen
         run: sudo apt-get install -y doxygen
       - name: Generate Documentation
         run: doxygen Doxyfile
-        working-directory: xlsx-JSON
-
-
-      
-
+        working-directory: xlsx-JSON/xlsx-JSON
